--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -47,18 +47,17 @@
                                 <th>View ID Proof</th>
                                 <th>View Resume</th>
                                 <th>View Project</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody id="freeTableBody">
                             <tr class="loading-row">
-                                <td colspan="5">Loading...</td>
+                                <td colspan="6">Loading...</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </section>
-
-            <!-- Paid Internship Table -->
+            </section>            <!-- Paid Internship Table -->
             <section class="table-section" id="paidSection" style="display: none;">
                 <div class="section-header">
                     <h3>Paid Internship</h3>
@@ -72,12 +71,13 @@
                                 <th>USN</th>
                                 <th>View ID Proof</th>
                                 <th>View Resume</th>
-                                <th>View Project</th>
+                                <th>View Payment Screenshots</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody id="paidTableBody">
                             <tr class="loading-row">
-                                <td colspan="5">Loading...</td>
+                                <td colspan="6">Loading...</td>
                             </tr>
                         </tbody>
                     </table>
